# mail-application

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.bloom-server  Dockerfile.client  Dockerfile.frontend  Dockerfile.tests  Dockerfile.web  README.md  docker-compose.yml  package-lock.json
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
backend/bloom-client/: main.py  tcp_client.py  user_interface.py
backend/bloom-server/: BitArrayLoader.cpp  BitArrayLoader.h  BitArraySaver.cpp  BitArraySaver.h  BloomFilter.cpp  BloomFilter.h  IHashFunction.h  ILoader.h  ISaver.h  LogicHandler.cpp  LogicHandler.h  Server.cpp  Server.h  SocketManager.cpp  SocketManager.h  StdHash.h  ThreadPool.cpp  ThreadPool.h  UrlFileLoader.cpp  UrlFileLoader.h  UrlFileSaver.cpp  UrlFileSaver.h  main.cpp
backend/web/: .env  app.js  package-lock.json  package.json
backend/web/controllers/: blacklists.js  labels.js  mails.js  tokens.js  users.js
backend/web/middleware/: auth.js  generateId.js  urlChecker.js
backend/web/models/: blacklists.js  labels.js  mails.js  users.js
backend/web/routes/: blacklists.js  labelRoutes.js  mailRoutes.js  tokenRoutes.js  userRoutes.js
data/: bit_array.txt  blacklist.txt
frontend/mail-app/: .eslintrc.json  package-lock.json  package.json
frontend/mail-app/public/: index.html
frontend/mail-app/src/: App.css  App.js
frontend/mail-app/src/utils/: toast.js
mongo-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3881347804773947893.wt  collection-2--3881347804773947893.wt  index-1--3881347804773947893.wt  index-3--3881347804773947893.wt  sizeStorer.wt
mongo-data/diagnostic.data/: metrics.2025-08-30T15-59-29Z-00000  metrics.2025-09-29T14-04-32Z-00000  metrics.interim
mongo-data/journal/: WiredTigerLog.0000000001
wiki/: app.md  authentication.md  label-operations.md  mail-operations.md  setup.md  spam.md
(+117 files in other folders)
